[package]
name = "imagequant"
version = "4.0.0-beta.7"
description = "Convert 24/32-bit images to 8-bit palette with alpha channel.\nFor lossy PNG compression and high-quality GIF images\nDual-licensed like pngquant. See https://pngquant.org for details."
authors = ["Kornel Lesiński <kornel@pngquant.org>"]
license = "GPL-3.0-or-later"
homepage = "https://pngquant.org/lib"
repository = "https://github.com/ImageOptim/libimagequant"
documentation = "https://docs.rs/imagequant"
categories = ["multimedia::images"]
keywords = ["quantization", "palette", "pngquant", "compression", "gif"]
include = ["COPYRIGHT", "src/*.rs", "*.h", "README.md", "Cargo.toml"]
readme = "README.md"
edition = "2018"

[features]
default = ["threads"]
threads = ["rayon", "thread_local"]

# this is private and unstable for imagequant-sys only, do not use
_internal_c_ffi = []

[lib]
doctest = false

[dependencies]
arrayvec = "0.7.2"
fallible_collections = "0.4.3"
noisy_float = "0.2.0"
rgb = { version = "0.8.30", features = ["argb"] }
rayon = { version = "1.5.1", optional = true }
thread_local = { version = "1.1.3", optional = true }
once_cell = "1.9.0"
