[package]
name = "imagequant"
version = "4.3.0"
description = "Convert 24/32-bit images to 8-bit palette with alpha channel.\nFor lossy PNG compression and high-quality GIF images\nDual-licensed like pngquant. See https://pngquant.org for details."
authors = ["Kornel Lesiński <kornel@pngquant.org>"]
license = "GPL-3.0-or-later"
homepage = "https://pngquant.org/lib"
repository = "https://github.com/ImageOptim/libimagequant"
documentation = "https://docs.rs/imagequant"
categories = ["multimedia::images"]
keywords = ["quantization", "palette", "pngquant", "compression", "gif"]
include = ["COPYRIGHT", "src/*.rs", "*.h", "README.md", "Cargo.toml"]
readme = "README.md"
edition = "2021"
rust-version = "1.64"

[features]
default = ["threads"]
threads = ["dep:rayon", "dep:thread_local"]
# supports up to 2048 colors for palettes, but NOT FOR REMAPPING
large_palettes = []

# this is private and unstable for imagequant-sys only, do not use
_internal_c_ffi = []

[profile.release]
debug = false
panic = "abort"

[lib]
doctest = false

[dependencies]
arrayvec = "0.7.2"
rgb = { version = "0.8.33", features = ["argb"] }
rayon = { version = "1.5.3", optional = true }
thread_local = { version = "1.1.4", optional = true }
once_cell = "1.13.1"

[dev-dependencies]
lodepng = "3.10.0"

[workspace]
members = ["imagequant-sys", "imagequant-sys/c_test"]

[package.metadata.release]
consolidate-commits = true
tag-message = ""
tag-prefix = ""
tag-name = "{{version}}"
