[package]
name = "imagequant-sys"
version = "4.0.4"
description = "Convert 24/32-bit images to 8-bit palette with alpha channel.\nC API/FFI libimagequant that powers pngquant lossy PNG compressor.\n\nDual-licensed like pngquant. See https://pngquant.org for details."
authors = ["Kornel Lesiński <kornel@pngquant.org>"]
license = "GPL-3.0-or-later"
homepage = "https://pngquant.org/lib"
repository = "https://github.com/ImageOptim/libimagequant"
documentation = "https://docs.rs/imagequant"
categories = ["multimedia::images"]
keywords = ["quantization", "palette", "image", "dither", "quant"]
include = ["COPYRIGHT", "src/*.rs", "build.rs", "*.h", "README.md", "Cargo.toml"]
readme = "README.md"
edition = "2021"
links = "imagequant"
build = "build.rs"
rust-version = "1.63"

[lib]
crate-type = ["staticlib", "lib"]
doctest = false
path = "src/ffi.rs"
name = "imagequant_sys"

[dependencies]
imagequant = { path = "..", version = "4.2.1", default-features = false, features = ["_internal_c_ffi"] }
bitflags = "2.0"
libc = "0.2.112"

[package.metadata.capi.library]
name = "imagequant"
version = "0.4.0"

[package.metadata.capi.pkg_config]
name = "imagequant"
filename = "imagequant"
description = "Convert 24/32-bit images to 8-bit palette with alpha channel."

[package.metadata.capi.header]
name = "libimagequant"
subdirectory = ""
generation = false

[package.metadata.capi.install.include]
asset = [{from = "libimagequant.h"}]

[package.metadata.release]
consolidate-commits = true
tag-message = ""
tag-prefix = ""
tag-name = "{{version}}"

[features]
# internal for cargo-c only
capi = []
default = ["imagequant/default"]
threads = ["imagequant/threads"]
