[package]
name = "imagequant-sys"
version = "4.2.0"
description = "Convert 24/32-bit images to 8-bit palette with alpha channel.\nC API/FFI libimagequant that powers pngquant lossy PNG compressor.\n\nDual-licensed like pngquant. See https://pngquant.org for details."
authors = ["Kornel Lesiński <kornel@pngquant.org>"]
license = "GPL-3.0-or-later"
homepage = "https://pngquant.org/lib"
repository = "https://github.com/ImageOptim/libimagequant"
documentation = "https://docs.rs/imagequant"
categories = ["multimedia::images"]
keywords = ["quantization", "palette", "image", "dither", "quant"]
include = ["COPYRIGHT", "src/*.rs", "build.rs", "*.h", "README.md", "Cargo.toml"]
readme = "README.md"
edition = "2021"
links = "imagequant"
build = "build.rs"
rust-version = "1.64"

[features]
default = ["imagequant/default"]

# libimagequant makes good use of multi-threading, so disabling threads has a significant performance peanalty
threads = ["imagequant/threads"]

# To opt-in you must disable the default features to disable `std` and `threads`, and also enable `no_std`
std = ["imagequant/std"]
no_std = ["imagequant/no_std"]

# Enable if you get errors like "no global memory allocator found" or "`#[panic_handler]` function required, but not found"
no_std_global_handlers = ["no_std"]

# internal for cargo-c only <http://lib.rs/cargo-c>
capi = []

[lib]
crate-type = ["staticlib", "lib"]
doctest = false
path = "src/ffi.rs"
name = "imagequant_sys"

[dependencies]
imagequant = { path = "..", version = "4.5.0", default-features = false, features = ["_internal_c_ffi"] }
bitflags = "2.5"
libc = "0.2.153"

[profile.release]
debug = false
strip = true
panic = "abort"

[profile.dev]
panic = "abort"

[package.metadata.capi.library]
name = "imagequant"
version = "0.4.1"

[package.metadata.capi.pkg_config]
name = "imagequant"
filename = "imagequant"
description = "Convert 24/32-bit images to 8-bit palette with alpha channel."

[package.metadata.capi.header]
name = "libimagequant"
subdirectory = ""
generation = false

[package.metadata.capi.install.include]
asset = [{from = "libimagequant.h"}]

[package.metadata.release]
consolidate-commits = true
tag-message = ""
tag-prefix = ""
tag-name = "{{version}}"

